force-app/main/default/objects/AcademicTerm/AcademicTerm.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>