force-app/main/default/objects/AcademicTerm/fields/Admission_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Admission_Program_Code__c</fullName>
    <label>Admission Program Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>