force-app/main/default/objects/AcademicTerm/fields/Allocated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Budget__c</fullName>
    <defaultValue>2500000</defaultValue>
    <label>Allocated Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>