force-app/main/default/objects/AcademicTerm/fields/Applications_End_date__c.field-meta.xml
<CustomField>
    <fullName>Applications_End_date__c</fullName>
    <formula>EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applications End date</label>
    <type>Date</type>
</CustomField>