force-app/main/default/objects/AcademicTerm/fields/Applications_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Applications_Start_date__c</fullName>
    <formula>StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applications Start date</label>
    <type>Date</type>
</CustomField>