force-app/main/default/objects/AcademicTerm/fields/Fee_Payment_Schedule_Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_Payment_Schedule_Attachment_Name__c</fullName>
    <label>Fee Payment Schedule Attachment Name</label>
    <type>TextArea</type>
</CustomField>