force-app/main/default/objects/AcademicTerm/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Financial Year</label>
    <referenceTo>Financial_Year__c</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Terms</relationshipName>
    <type>Lookup</type>
</CustomField>