force-app/main/default/objects/AcademicTerm/fields/Grading_Period_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Grading_Period_Sequence__c</fullName>
    <description>Indicates which Term this is. For example, enter &quot;1&quot; for the first quarter or semester, &quot;2&quot; for the second quarter or semester, etc.</description>
    <label>Grading Period Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>