force-app/main/default/objects/AcademicTerm/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <label>Graduation Day</label>
    <type>Date</type>
</CustomField>