force-app/main/default/objects/AcademicTerm/fields/Graduation_day__c.field-meta.xml
<CustomField>
    <fullName>Graduation_day__c</fullName>
    <label>Enrollment Day</label>
    <type>Date</type>
</CustomField>