force-app/main/default/objects/AcademicTerm/fields/Instructional_Days__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Days__c</fullName>
    <description>The total number of instructional days in this Term.</description>
    <label>Instructional Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>