force-app/main/default/objects/AcademicTerm/fields/Intake_No__c.field-meta.xml
<CustomField>
    <fullName>Intake_No__c</fullName>
    <label>Intake No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>