force-app/main/default/objects/AcademicTerm/fields/Last_Day_On_Campus__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_On_Campus__c</fullName>
    <label>Last Day On Campus</label>
    <type>Date</type>
</CustomField>