force-app/main/default/objects/AcademicTerm/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Terms1</relationshipName>
    <type>Lookup</type>
</CustomField>