force-app/main/default/objects/AcademicTerm/fields/PG_ID_Sequence_Start__c.field-meta.xml
<CustomField>
    <fullName>PG_ID_Sequence_Start__c</fullName>
    <label>PG ID Sequence Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>