force-app/main/default/objects/AcademicTerm/fields/PGP_Finance_Det_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>PGP_Finance_Det_Cutoff_Date__c</fullName>
    <description>PGP Admit Portal Finance Details Sectional Cutoff Date</description>
    <inlineHelpText>PGP Admit Portal Finance Details Sectional Cutoff Date</inlineHelpText>
    <label>Finance Details Cutoff Date</label>
    <type>Date</type>
</CustomField>