force-app/main/default/objects/AcademicTerm/fields/PGP_Health_Details_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>PGP_Health_Details_Cutoff_Date__c</fullName>
    <label>Health Details Cutoff Date</label>
    <type>Date</type>
</CustomField>