force-app/main/default/objects/AcademicTerm/fields/PGP_Managment_Hr_details_cut_off_date__c.field-meta.xml
<CustomField>
    <fullName>PGP_Managment_Hr_details_cut_off_date__c</fullName>
    <label>Managment &amp; Hr details cut off  date</label>
    <type>Date</type>
</CustomField>