force-app/main/default/objects/AcademicTerm/fields/PGP_PersonalDet_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>PGP_PersonalDet_Cutoff_Date__c</fullName>
    <description>PGP Admit Portal Personal Details Sectional Cutoff Date</description>
    <inlineHelpText>PGP Admit Portal Personal Details Sectional Cutoff Date</inlineHelpText>
    <label>Personal Details Cutoff Date</label>
    <type>Date</type>
</CustomField>