force-app/main/default/objects/AcademicTerm/fields/PGP_Slot_details_cut_off_date__c.field-meta.xml
<CustomField>
    <fullName>PGP_Slot_details_cut_off_date__c</fullName>
    <label>Slot details cut off date</label>
    <type>Date</type>
</CustomField>