force-app/main/default/objects/AcademicTerm/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Academic Terms</relationshipLabel>
    <relationshipName>Academic_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>