force-app/main/default/objects/AcademicTerm/fields/Program_end_date__c.field-meta.xml
<CustomField>
    <fullName>Program_end_date__c</fullName>
    <label>Program end date</label>
    <type>Date</type>
</CustomField>