force-app/main/default/objects/AcademicTerm/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMPBA</fullName>
            </value>
            <value>
                <fullName>AMPH</fullName>
            </value>
            <value>
                <fullName>AMPI</fullName>
            </value>
            <value>
                <fullName>AMPOS</fullName>
            </value>
            <value>
                <fullName>AMPPP</fullName>
            </value>
            <value>
                <fullName>EFPM</fullName>
            </value>
            <value>
                <fullName>FPM</fullName>
            </value>
            <value>
                <fullName>PGP</fullName>
            </value>
            <value>
                <fullName>PGPMAX</fullName>
            </value>
            <value>
                <fullName>PGPpro</fullName>
            </value>
            <value>
                <fullName>PGPMFAB</fullName>
            </value>
            <value>
                <fullName>PGPYL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>