force-app/main/default/objects/AcademicTerm/fields/Program_start_date__c.field-meta.xml
<CustomField>
    <fullName>Program_start_date__c</fullName>
    <label>Program start date</label>
    <type>Date</type>
</CustomField>