force-app/main/default/objects/AcademicTerm/fields/Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_End_Date__c</fullName>
    <label>Registration End Date</label>
    <type>Date</type>
</CustomField>