force-app/main/default/objects/AcademicTerm/fields/Remaining_Budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget__c</fullName>
    <label>Remaining Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>