force-app/main/default/objects/AcademicTerm/validationRules/Program_End_Date_cannot_be_earlier_than.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_End_Date_cannot_be_earlier_than</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Program_start_date__c)),
    NOT(ISBLANK(Program_end_date__c)),
    Program_end_date__c &lt; Program_start_date__c
)</errorConditionFormula>
    <errorMessage>Program End Date cannot be earlier than Program Start Date.</errorMessage>
</ValidationRule>