force-app/main/default/objects/AcademicTerm/listViews/All_AcademicTerms.listView-meta.xml
<ListView>
    <fullName>All_AcademicTerms</fullName>
    <columns>Name</columns>
    <columns>Program__c</columns>
    <columns>AcademicYear</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>IsActive</columns>
    <columns>Location__c</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Academic Cohorts</label>
</ListView>